package Fourmis;

import java.util.ArrayList;

public class Node2D extends Node {


    /**
     * Créé un noeud
     */
    public Node2D(){
        super();
    }



    //Nous pouvons crée des méthodes spécialement pour les noeuds 2d maintenant..

}


