package Fourmis;

/**
 * Différent état possible sur un noeud
 * FREE == Libre
 * OBSTACLE == Obstacle
 * ANTHILL == Fourmillière
 */
public enum State {
    FREE,
    OBSTACLE,
    ANTHILL //Fourmilliere
}
